force-app/main/default/objects/pse__UI_Helper__c/pse__UI_Helper__c.object-meta.xml
<CustomObject>
    <description>A helper object used by user interfaces (VF, et al) to access salesforce controls.
This object is not intended to store data, and should have full CRUD/FLS permissions to all users.</description>
    <label>UI Helper</label>
    <nameField>
        <label>UI Helper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UI Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>