force-app/main/default/objects/pse__UI_Helper__c/fields/pse__Account__c.field-meta.xml
<CustomField>
    <fullName>pse__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UI Helpers</relationshipLabel>
    <relationshipName>UI_Helpers</relationshipName>
    <type>Lookup</type>
</CustomField>