force-app/main/default/objects/pse__UI_Helper__c/fields/pse__Checkbox__c.field-meta.xml
<CustomField>
    <fullName>pse__Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>