force-app/main/default/objects/pse__UI_Helper__c/fields/pse__Contact__c.field-meta.xml
<CustomField>
    <fullName>pse__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UI Helpers (Contact)</relationshipLabel>
    <relationshipName>UI_Helpers2</relationshipName>
    <type>Lookup</type>
</CustomField>