force-app/main/default/objects/pse__UI_Helper__c/fields/pse__Date_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Date_Time__c</fullName>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>