force-app/main/default/objects/pse__UI_Helper__c/fields/pse__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>UI Helpers</relationshipLabel>
    <relationshipName>UI_Helpers</relationshipName>
    <type>Lookup</type>
</CustomField>