force-app/main/default/objects/pse__UI_Helper__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.pse__Is_Resource__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UI Helpers</relationshipLabel>
    <relationshipName>UI_Helpers</relationshipName>
    <type>Lookup</type>
</CustomField>