force-app/main/default/objects/pse__UI_Helper__c/fields/pse__User__c.field-meta.xml
<CustomField>
    <fullName>pse__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UI_Helpers</relationshipName>
    <type>Lookup</type>
</CustomField>